--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: conda-incubator/setup-miniconda@v2
       with:
-        activate-environment: bf-tracing
+        activate-environment: meta-tracing
         environment-file: environment.yml
         python-version: 2.7.18
         auto-activate-base: false
