--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ protobuf==4.21.5
 py==1.11.0
 pycparser==2.21
 pyparsing==3.0.9
-pytest==7.1.2
+pytest==2.9.2
+rpython==0.2.1
 tabulate==0.8.10
 tomli==2.0.1
