--- a/.github/workflows/rpython.yml
+++ b/.github/workflows/rpython.yml
@@ -34,3 +34,5 @@ jobs:
     - name: Download RPython
       run: |
         hg clone https://foss.heptapod.net/pypy/pypy .pypy
+    - name: Download RPython
+      run: make translate-awk-vm
