--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -3,7 +3,7 @@ name: PyTest
 on: [push]
 
 jobs:
-  build-linux:
+  pytest:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -33,3 +33,29 @@ jobs:
       run: |
         conda install pytest
         make test
+  rpython:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
+    strategy:
+      max-parallel: 5
+    steps:
+    - uses: actions/checkout@v3
+    - uses: conda-incubator/setup-miniconda@v2
+      with:
+        activate-environment: meta-tracing
+        environment-file: environment.yml
+        python-version: 2.7.18
+        auto-activate-base: false
+    - name: Add conda to system path
+      run: |
+        # $CONDA is an environment variable pointing to the root of the miniconda directory
+        echo $CONDA/bin >> $GITHUB_PATH
+    - name: Install Mercurial
+      run: sudo apt-get install mercurial
+    - name: Download RPython
+      run: |
+        hg clone https://foss.heptapod.net/pypy/pypy .pypy
+    - name: Download RPython
+      run: make translate-awk-vm
