chore: ci reuse pypy job

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -3,6 +3,22 @@ name: PyTest
 on: [push]
 
 jobs:
+  pypy:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
+    steps:
+      - name: Install Mercurial
+        run: sudo apt-get install mercurial
+      - name: Download RPython
+        run: hg clone https://foss.heptapod.net/pypy/pypy .pypy
+      - name: Upload .pypy
+        uses: actions/upload-artifact@v3
+        with:
+          name: .pypy
+          path: .pypy
+
   pytest:
     runs-on: ubuntu-latest
     defaults:
@@ -34,7 +50,9 @@ jobs:
         conda install pytest
         source .envrc && make test
   
-  rpython:
+  rpython-no-jit:
+    name: PYPY translate (no jit)
+    needs: pypy
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -53,10 +71,38 @@ jobs:
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         echo $CONDA/bin >> $GITHUB_PATH
-    - name: Install Mercurial
-      run: sudo apt-get install mercurial
-    - name: Download RPython
-      run: |
-        hg clone https://foss.heptapod.net/pypy/pypy .pypy
+    - name: Download .pypy
+      uses: actions/download-artifact@v3
+      with:
+        name: .pypy
     - name: RPython Translate
       run: make translate-awk-vm-no-jit
+
+  rpython-jit:
+    name: PYPY translate (jit)
+    needs: pypy
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
+    strategy:
+      max-parallel: 5
+    steps:
+    - uses: actions/checkout@v3
+    - uses: conda-incubator/setup-miniconda@v2
+      with:
+        activate-environment: meta-tracing
+        environment-file: environment.yml
+        python-version: 2.7.18
+        auto-activate-base: false
+    - name: Add conda to system path
+      run: |
+        # $CONDA is an environment variable pointing to the root of the miniconda directory
+        echo $CONDA/bin >> $GITHUB_PATH
+    - name: Download .pypy
+      uses: actions/download-artifact@v3
+      with:
+        name: .pypy
+    - name: RPython Translate
+      run: make translate-awk-vm
+      
