--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -45,6 +45,10 @@ jobs:
         flake8 ./src/**/*.py --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         # flake8 ./src/**/*.py --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Install Mercurial
+      run: sudo apt-get install mercurial
+    - name: Download RPython
+      run: hg clone https://foss.heptapod.net/pypy/pypy .pypy
     - name: Test with pytest
       run: |
         conda install pytest
