chore: ci upload-artifact

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -3,7 +3,7 @@ name: PyTest
 on: [push]
 
 jobs:
-  # TODO: upload artifact never terminates
+  # TODO: fix upload-artifact - never terminates
   # pypy:
   #   runs-on: ubuntu-latest
   #   defaults:
@@ -57,7 +57,6 @@ jobs:
   
   rpython-no-jit:
     name: PYPY translate (no jit)
-    # needs: pypy
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -76,20 +75,20 @@ jobs:
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         echo $CONDA/bin >> $GITHUB_PATH
-    # - name: Download .pypy
-    #   uses: actions/download-artifact@v3
-    #   with:
-    #     name: .pypy
     - name: Install Mercurial
       run: sudo apt-get install mercurial
     - name: Download RPython
       run: hg clone https://foss.heptapod.net/pypy/pypy .pypy
     - name: RPython Translate
       run: make translate-awk-vm-no-jit
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: awk_vm-c-no-jit
+        path: ./awk_vm-c
 
   rpython-jit:
     name: PYPY translate (jit)
-    # needs: pypy
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -108,14 +107,14 @@ jobs:
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         echo $CONDA/bin >> $GITHUB_PATH
-    # - name: Download .pypy
-    #   uses: actions/download-artifact@v3
-    #   with:
-    #     name: .pypy
     - name: Install Mercurial
       run: sudo apt-get install mercurial
     - name: Download RPython
       run: hg clone https://foss.heptapod.net/pypy/pypy .pypy    
     - name: RPython Translate
       run: make translate-awk-vm
-      
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: awk_vm-c-jit
+        path: ./awk_vm-c
