--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -5,38 +5,17 @@ on: [push]
 jobs:
   pytest:
     runs-on: ubuntu-latest
+    container: iamkimchi/pypy-trace:latest
     defaults:
       run:
         shell: bash -l {0}
     strategy:
       max-parallel: 5
     steps:
-    - uses: actions/checkout@v3
-    - uses: conda-incubator/setup-miniconda@v2
-      with:
-        activate-environment: meta-tracing
-        environment-file: environment.yml
-        python-version: 2.7.18
-        auto-activate-base: false
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
     - name: Lint with flake8
-      run: |
-        conda install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 ./src/**/*.py --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        # flake8 ./src/**/*.py --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Install Mercurial
-      run: sudo apt-get install mercurial
-    - name: Download RPython
-      run: hg clone https://foss.heptapod.net/pypy/pypy .pypy
-    - name: Test with pytest
-      run: |
-        conda install pytest
-        source .envrc && make test
+      run: flake8 ./src/**/*.py --count --select=E9,F63,F7,F82 --show-source --statistics
+    - name: Test
+      run: source .envrc && make test
   
   rpython-no-jit:
     name: PYPY translate (no jit)
