--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -12,8 +12,9 @@ jobs:
     strategy:
       max-parallel: 5
     steps:
-    - name: Lint with flake8
-      run: flake8 ./src/**/*.py --count --select=E9,F63,F7,F82 --show-source --statistics
+    - uses: actions/checkout@v3
+    # - name: Lint with flake8
+    #   run: flake8 ./src/**/*.py --count --select=E9,F63,F7,F82 --show-source --statistics
     - name: Test
       run: source .envrc && make test
   
