--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -28,9 +28,9 @@ jobs:
         wget https://github.com/sharkdp/hyperfine/releases/download/v1.15.0/hyperfine_1.15.0_amd64.deb
         sudo dpkg -i hyperfine_1.15.0_amd64.deb
     - name: Transpile (NO JIT)
-      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py ${PWD}/src/python/self-like.py
+      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py --opt=jit ${PWD}/src/python/self-like.py
     - name: Transpile (NO JIT)
-      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py ${PWD}/src/python/vanila.py
+      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py --opt=jit ${PWD}/src/python/vanila.py
     - name: Bench
       run: |
         hyperfine --warmup 1 './self-like-c' './vanila-c' 
