--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -6,11 +6,8 @@ jobs:
   rpython-no-jit:
     name: Bench
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash -l {0}
-    strategy:
-      max-parallel: 5
+    container:  
+      image: iamkimchi/pypy-trace:latest
     steps:
     - uses: actions/checkout@v3
     - uses: conda-incubator/setup-miniconda@v2
@@ -27,18 +24,18 @@ jobs:
       run: |
         wget https://github.com/sharkdp/hyperfine/releases/download/v1.15.0/hyperfine_1.15.0_amd64.deb
         sudo dpkg -i hyperfine_1.15.0_amd64.deb
-    # - name: Transpile (NO JIT)
-    #   run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py ${PWD}/src/python/self-like.py
-    # - name: Transpile (NO JIT)
-    #   run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py ${PWD}/src/python/vanila.py
-    # - name: Bench (NO JIT)
-    #   run: |
-    #     hyperfine --warmup 1 './self-like-c' './vanila-c' 
-    #     hyperfine -m 15 -M 15 './self-like-c' './vanila-c'
-    - name: Transpile (JIT)
-      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py --opt=jit ${PWD}/src/python/self-like.py
+    - name: Transpile (NO JIT)
+      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py ${PWD}/src/python/vanila.py
+    - name: Transpile (NO JIT)
+      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py ${PWD}/src/python/self-like.py
+    - name: Bench (NO JIT)
+      run: |
+        hyperfine --warmup 1 './self-like-c' './vanila-c' 
+        hyperfine -m 15 -M 15 './self-like-c' './vanila-c'
     - name: Transpile (JIT)
       run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py --opt=jit ${PWD}/src/python/vanila.py
+    - name: Transpile (JIT)
+      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py --opt=jit ${PWD}/src/python/self-like.py
     - name: Bench (NO JIT)
       run: |
         hyperfine --warmup 1 './self-like-c' './vanila-c' 
