--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -10,14 +10,14 @@ jobs:
       image: iamkimchi/pypy-trace:latest
     steps:
     - uses: actions/checkout@v3
-    - uses: conda-incubator/setup-miniconda@v2
-      with:
-        activate-environment: meta-tracing
-        environment-file: environment.yml
-        python-version: 2.7.18
-        auto-activate-base: false
-    - name: Add conda to system path
-      run: echo $CONDA/bin >> $GITHUB_PATH
+    # - uses: conda-incubator/setup-miniconda@v2
+    #   with:
+    #     activate-environment: meta-tracing
+    #     environment-file: environment.yml
+    #     python-version: 2.7.18
+    #     auto-activate-base: false
+    # - name: Add conda to system path
+    #   run: echo $CONDA/bin >> $GITHUB_PATH
     - name: Download PyPy
       run: make get-pypy
     - name: Install hyperfine
