--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -20,10 +20,10 @@ jobs:
     #   run: echo $CONDA/bin >> $GITHUB_PATH
     - name: Download PyPy
       run: make get-pypy
-    - name: Install hyperfine
-      run: |
-        wget https://github.com/sharkdp/hyperfine/releases/download/v1.15.0/hyperfine_1.15.0_amd64.deb
-        sudo dpkg -i hyperfine_1.15.0_amd64.deb
+    # - name: Install hyperfine
+    #   run: |
+    #     wget https://github.com/sharkdp/hyperfine/releases/download/v1.15.0/hyperfine_1.15.0_amd64.deb
+    #     sudo dpkg -i hyperfine_1.15.0_amd64.deb
     - name: Transpile (NO JIT)
       run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py ${PWD}/src/python/vanila.py
     - name: Transpile (NO JIT)
