--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -10,28 +10,16 @@ jobs:
       image: iamkimchi/pypy-trace:latest
     steps:
     - uses: actions/checkout@v3
-    # - uses: conda-incubator/setup-miniconda@v2
-    #   with:
-    #     activate-environment: meta-tracing
-    #     environment-file: environment.yml
-    #     python-version: 2.7.18
-    #     auto-activate-base: false
-    # - name: Add conda to system path
-    #   run: echo $CONDA/bin >> $GITHUB_PATH
     - name: Download PyPy
       run: make get-pypy
-    # - name: Install hyperfine
+    # - name: Transpile (NO JIT)
+    #   run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py ${PWD}/src/python/vanila.py
+    # - name: Transpile (NO JIT)
+    #   run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py ${PWD}/src/python/self-like.py
+    # - name: Bench (NO JIT)
     #   run: |
-    #     wget https://github.com/sharkdp/hyperfine/releases/download/v1.15.0/hyperfine_1.15.0_amd64.deb
-    #     sudo dpkg -i hyperfine_1.15.0_amd64.deb
-    - name: Transpile (NO JIT)
-      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py ${PWD}/src/python/vanila.py
-    - name: Transpile (NO JIT)
-      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py ${PWD}/src/python/self-like.py
-    - name: Bench (NO JIT)
-      run: |
-        hyperfine --warmup 1 './self-like-c' './vanila-c' 
-        hyperfine -m 15 -M 15 './self-like-c' './vanila-c'
+    #     hyperfine --warmup 1 './self-like-c' './vanila-c' 
+    #     hyperfine -m 15 -M 15 './self-like-c' './vanila-c'
     - name: Transpile (JIT)
       run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py --opt=jit ${PWD}/src/python/vanila.py
     - name: Transpile (JIT)
