--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -20,10 +20,10 @@ jobs:
     #   run: |
     #     hyperfine --warmup 1 './self-like-c' './vanila-c' 
     #     hyperfine -m 15 -M 15 './self-like-c' './vanila-c'
-    - name: Transpile (JIT)
-      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py --opt=jit ${PWD}/src/python/vanila.py
-    - name: Transpile (JIT)
+    - name: Transpile self-like (JIT)
       run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py --opt=jit ${PWD}/src/python/self-like.py
+    - name: Transpile class (JIT)
+      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py --opt=jit ${PWD}/src/python/class.py
     - name: Bench (NO JIT)
       run: |
         hyperfine --warmup 1 './self-like-c' './vanila-c' 
