--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -6,25 +6,30 @@ jobs:
   rpython-no-jit:
     name: Bench
     runs-on: ubuntu-latest
+    environment: meta-tracing-environment
     container:  
       image: iamkimchi/pypy-trace:latest
     steps:
     - uses: actions/checkout@v3
     - name: Download PyPy
       run: make get-pypy
-    # - name: Transpile (NO JIT)
-    #   run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py ${PWD}/src/python/vanila.py
-    # - name: Transpile (NO JIT)
-    #   run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py ${PWD}/src/python/self-like.py
+    - name: Transpile (NO JIT)
+      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py ${PWD}/src/python/vanila.py
+    - name: Upload Artefact
+      run: python ./scripts/drop.py ""./vanila-c" "/meta-tracing/$(make version)-$(git rev-parse HEAD)-vanila-c"
+    - name: Transpile (NO JIT)
+      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py ${PWD}/src/python/self-like.py
+    - name: Upload Artefact
+      run: python ./scripts/drop.py ""./self-like-c" "/meta-tracing/$(make version)-$(git rev-parse HEAD)-self-like-c"
     # - name: Bench (NO JIT)
     #   run: |
     #     hyperfine --warmup 1 './self-like-c' './vanila-c' 
     #     hyperfine -m 15 -M 15 './self-like-c' './vanila-c'
-    - name: Transpile self-like (JIT)
-      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py --opt=jit ${PWD}/src/python/self-like.py
-    - name: Transpile class (JIT)
-      run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py --opt=jit ${PWD}/src/python/class.py
-    - name: Bench (NO JIT)
-      run: |
-        hyperfine --warmup 1 './self-like-c' './vanila-c' 
-        hyperfine -m 15 -M 15 './self-like-c' './vanila-c'
+    # - name: Transpile self-like (JIT)
+    #   run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py --opt=jit ${PWD}/src/python/self-like.py
+    # - name: Transpile class (JIT)
+    #   run: PYTHONPATH=${PWD}:${PWD}/.pypy/ python ./.pypy/rpython/translator/goal/translate.py --opt=jit ${PWD}/src/python/class.py
+    # - name: Bench (NO JIT)
+    #   run: |
+    #     hyperfine --warmup 1 './self-like-c' './vanila-c' 
+    #     hyperfine -m 15 -M 15 './self-like-c' './vanila-c'
