--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,26 @@
+atomicwrites==1.4.0
+attrs==21.4.0
+backports.functools-lru-cache==1.6.4
+certifi==2020.6.20
+chardet==4.0.0
+configparser==4.0.2
+contextlib2==0.6.0.post1
+dropbox==11.34.0
+funcsigs==1.0.2
+idna==2.10
+importlib-metadata==1.3.0
+more-itertools==5.0.0
+packaging==20.9
+pathlib2==2.3.5
+pluggy==0.13.1
+ply==3.11
+py==1.10.0
+pyparsing==2.4.7
 pytest==4.6.11
+requests==2.27.1
+scandir==1.10.0
+six==1.16.0
+stone==3.3.1
+urllib3==1.26.12
+wcwidth==0.2.5
+zipp==0.6.0
