--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -18,6 +18,6 @@ jobs:
     - name: lfs pull
       run: git lfs pull
     - name: Bench 0.0.9
-      run: bash ./scripts/bench.sh 0.0.9
+      run: bash ./scripts/bench.sh 0.0.9 100 100
     - name: Bench 0.0.10
-      run: bash ./scripts/bench.sh 0.0.10
+      run: bash ./scripts/bench.sh 0.0.10 100 100
