--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,7 @@ bin/0.0.10/0.0.10_3d907f134862988933d6171baa21186306657be6_1663953396_python_sel
 bin/0.0.10/0.0.10_3d907f134862988933d6171baa21186306657be6_1663953401_python_plain_class-c filter=lfs diff=lfs merge=lfs -text
 bin/0.0.10/0.0.10_3d907f134862988933d6171baa21186306657be6_python_plain_class-c filter=lfs diff=lfs merge=lfs -text
 bin/0.0.10/0.0.10_3d907f134862988933d6171baa21186306657be6_python_self_like_class-c filter=lfs diff=lfs merge=lfs -text
+bin/0.0.11/0.0.11_83a815b595c46796eef0de98fd43354a922fcaf9_python_plain_class-jit-c filter=lfs diff=lfs merge=lfs -text
+bin/0.0.11/0.0.11_83a815b595c46796eef0de98fd43354a922fcaf9_python_self_like_class-jit-c filter=lfs diff=lfs merge=lfs -text
+bin/0.0.11/0.0.11_83a815b595c46796eef0de98fd43354a922fcaf9_python_plain_class-c filter=lfs diff=lfs merge=lfs -text
+bin/0.0.11/0.0.11_83a815b595c46796eef0de98fd43354a922fcaf9_python_self_like_class-c filter=lfs diff=lfs merge=lfs -text
